# KatanaSimpleProject

./: SimpleProject.katana
src/: CMakeLists.txt  main.cpp
